fix: alignement vertical block de la search bar sur mobile

--- a/css/style.css
+++ b/css/style.css
@@ -331,19 +331,22 @@ footer {
     }
 
     .search-bar {
-        flex-direction: column;
-        gap: 10px;
+        display: block;
         background: rgba(255, 255, 255, 0.05);
         padding: 12px;
+        width: 100%;
     }
 
     .search-bar input {
+        display: block;
         width: 100%;
-        padding: 12px 20px;
+        margin-bottom: 10px;
         text-align: center;
+        padding: 12px;
     }
 
     .search-bar button {
+        display: block;
         width: 100%;
         padding: 14px;
     }
